# zk-snark

./: .gitignore  CMakeLists.txt  COMPLETE_GUIDE_WITH_EXAMPLES.md  FIELD_ASSESSMENT_REPORT.md  LICENSE  README.md  run_all_tests.sh  run_field_tests.sh  run_working_tests.sh
apps/: zkprove.cpp  zksetup.cpp  zkverify.cpp
benchmarks/: README.md
data/circuits/: README.md  simple_mult.r1cs
data/keys/: README.md
docs/: INDEX.md  POLYNOMIAL_IMPLEMENTATION.md  QAP_IMPLEMENTATION_SUMMARY.md  R1CS_IMPLEMENTATION_SUMMARY.md  README.md  README_guide.md  design.md  design_vietnamese_supplement.md
examples/: ab_circuit.hpp  ab_demo.sh  qap_demo.cpp
include/zkmini/: .fft.hpp  .fq.hpp  .fq12.hpp  .fq2.hpp  .fq6.hpp  .g1.hpp  .g2.hpp  .groth16.hpp  .keys.hpp  .msm.hpp  .pairing.hpp  .polynomial.hpp  .qap.hpp  .random.hpp  .serialization.hpp  .utils.hpp  fft.hpp  field.hpp  fq.hpp  fq12.hpp  fq2.hpp  fq6.hpp  g1.hpp  g2.hpp  groth16.hpp  keys.hpp  msm.hpp  pairing.hpp  qap.hpp  (+5 more)
scripts/: README.md
src/: .fft.cpp  .fq.cpp  .fq12.cpp  .fq2.cpp  .fq6.cpp  .g1.cpp  .g2.cpp  .groth16.cpp  .keys.cpp  .msm.cpp  .pairing.cpp  .polynomial.cpp  .qap.cpp  .r1cs.cpp  .random.cpp  .serialization.cpp  .utils.cpp  fft.cpp  field.cpp  fq.cpp  fq12.cpp  fq2.cpp  fq6.cpp  g1.cpp  g2.cpp  groth16.cpp  keys.cpp  msm.cpp  pairing.cpp  params_bn254.cpp.bak  polynomial.cpp  qap.cpp  r1cs.cpp  random.cpp  serialization.cpp  utils.cpp
tests/: test_ec.cpp  test_field.cpp  test_field_basic.cpp  test_field_comprehensive.cpp  test_groth16.cpp.bak  test_pairing.cpp  test_poly.cpp  test_r1cs_qap.cpp.bak
